fix: bring back browser functionality to hide scrollbar
This comes with the price that using the textarea scrolls the page.
Didn't find a viable solution to prevent this and still keep the browser
functionality.

--- a/src/styles/bottom-bar.css
+++ b/src/styles/bottom-bar.css
@@ -6,8 +6,8 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  padding: 12px 0 12px 0px;
+  padding: 12px 0 20px 0px;
   background: rgba(255, 255, 255, 0.98);
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  border: 1px solid rgba(0, 0, 0, 0.08);
+  border-top: 1px solid rgba(0, 0, 0, 0.08);
 }
