--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,12 +23,6 @@ html {
   box-sizing: border-box;
 }
 
-#root,
-html,
-body {
-  height: 100%;
-}
-
 button {
   background: rgba(0, 0, 0, 0);
   color: rgba(0, 0, 0, 0.4);
